--- a/app/code/Toptal/Blog/view/frontend/layout/blog_post_view.xml
+++ b/app/code/Toptal/Blog/view/frontend/layout/blog_post_view.xml
@@ -2,9 +2,9 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="2columns-left" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
         <referenceContainer name="content">
-            <block class="Toptal\Blog\Block\Posts"
-                   name="posts.list"
-                   template="Toptal_Blog::post/list.phtml" />
-        </referenceContainer>a
+            <block class="Toptal\Blog\Block\View"
+                   name="post.view"
+                   template="Toptal_Blog::post/view.phtml" />
+        </referenceContainer>
     </body>
 </page>
